--- a/index.html
+++ b/index.html
@@ -231,6 +231,104 @@
     </section>
     <!-- Akhir features -->
 
+    <!-- Designer -->
+
+    <section class="designer p-5">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col">
+            <h3>Our Designer</h3>
+            <p>Pakaian terbaik dari designer profesional</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-6 col-sm-3 text-center">
+            <figure class="figure">
+              <img src="img/designer/1.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption text-center">
+                <h5>Anne Mortgery</h5>
+                <p>Artistic Cloth</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-6 col-sm-3 text-center">
+            <figure class="figure">
+              <img src="img/designer/1.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption text-center">
+                <h5>Anne Mortgery</h5>
+                <p>Artistic Cloth</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-6 col-sm-3 text-center">
+            <figure class="figure">
+              <img src="img/designer/1.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption text-center">
+                <h5>Anne Mortgery</h5>
+                <p>Artistic Cloth</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-6 col-sm-3 text-center">
+            <figure class="figure">
+              <img src="img/designer/1.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption text-center">
+                <h5>Anne Mortgery</h5>
+                <p>Artistic Cloth</p>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+
+        <div class="row m-3">
+          <div class="col text-center">
+            <a href="">See All Our Designers</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Designer -->
+
+    <!-- Footer -->
+
+    <footer class="border-top p-5">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-1">
+            <a href="">
+              <img src="img/logo_small.png" />
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="">
+              <img src="img/social/fb.png" />
+            </a>
+            <a href="">
+              <img src="img/social/twitter.png" />
+            </a>
+            <a href="">
+              <img src="img/social/ig.png" />
+            </a>
+          </div>
+        </div>
+        <div class="row mt-3 justify-content-between">
+          <div class="col-5">
+            <a href="">All Rights Reserved By Hefa Store Copyright 2019.</a>
+          </div>
+          <div class="col-6">
+            <nav class="nav justify-content-end text-uppercase">
+              <a class="nav-link active" href="#">Jobs</a>
+              <a class="nav-link" href="#">Developer</a>
+              <a class="nav-link" href="#">Terms</a>
+              <a class="nav-link" href="#">Privacy Policy</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Akhir Footer -->
+
     <!-- script javascript -->
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
