--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo_small.png" alt="Hefa Store" />
@@ -54,7 +54,7 @@
     <!-- Akhir Navbar -->
 
     <!-- carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="container">
           <div class="carousel-item active">
@@ -300,7 +300,7 @@
               <img src="img/logo_small.png" />
             </a>
           </div>
-          <div class="col-4">
+          <div class="col-4 text-end">
             <a href="">
               <img src="img/social/fb.png" />
             </a>
@@ -321,7 +321,7 @@
               <a class="nav-link active" href="#">Jobs</a>
               <a class="nav-link" href="#">Developer</a>
               <a class="nav-link" href="#">Terms</a>
-              <a class="nav-link" href="#">Privacy Policy</a>
+              <a class="nav-link pe-0" href="#">Privacy Policy</a>
             </nav>
           </div>
         </div>
