menyelesaikan halaman singlepage

--- a/single.html
+++ b/single.html
@@ -115,9 +115,160 @@
         </div>
       </div>
     </section>
-    <!-- Akhir Single Product -->
 
-    <!-- Akhir Breadcrumbs -->
+    <!-- Product Description & Review -->
+
+    <div class="product-description p-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="description" aria-selected="true">Product Description</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="review-tab" data-bs-toggle="tab" data-bs-target="#review" type="button" role="tab" aria-controls="review" aria-selected="false">Reviews (20)</button>
+              </li>
+            </ul>
+            <div class="tab-content p-3" id="myTabContent">
+              <div class="tab-pane fade show active product-review" id="description" role="tabpanel" aria-labelledby="description-tab">
+                <p>
+                  Payday is finally here and you've got some extra cash to help you stock up your summer wardrobe. Not sure where to start? ASOS Stylist Beccy Goldsworthy is here with the best of what's new, from 80s-inspired tracsuits to
+                  some seriously fresh trainers. Check out her picks below and watch the video for more.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptates dolorum atque, quibusdam voluptate debitis sint quas porro natus illum fuga, fugiat amet esse placeat quos vero doloremque cum autem. Lorem ipsum
+                  dolor sit amet, consectetur adipisicing elit. Maiores nihil quisquam sapiente recusandae quasi voluptates rerum, harum odio, quis optio exercitationem, sed adipisci? Explicabo ratione, necessitatibus optio velit commodi
+                </p>
+              </div>
+              <div class="tab-pane fade product-review" id="review" role="tabpanel" aria-labelledby="review-tab">
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/1.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Joe Mackenzie</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/2.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Brian Smith</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/1.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Joe Mackenzie</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/2.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Brian Smith</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/1.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Joe Mackenzie</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-1 d-none d-md-block">
+                    <img src="img/single/review/2.png" />
+                  </div>
+                  <div class="col">
+                    <h5>Brian Smith</h5>
+                    <p>Produknya bagus dan bahannya juga rapih dan cocok untuk kulit</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Akhir Product Description & Review -->
+
+    <!-- Similar Product -->
+
+    <section class="similar-product">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col">
+            <h3>Similar Product</h3>
+            <p>Pakaian pelengkap produk diatas</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <figure class="figure">
+              <img src="img/single/similar/1.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption">
+                <div class="row">
+                  <div class="col">
+                    <h4>Hatty Bomb</h4>
+                    <p>Match 20%</p>
+                  </div>
+                  <div class="col align-items-center d-flex justify-content-end">
+                    <p style="font-size: 18px">IDR. 209.000</p>
+                  </div>
+                </div>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-4">
+            <figure class="figure">
+              <img src="img/single/similar/2.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption">
+                <div class="row">
+                  <div class="col">
+                    <h4>White Pure</h4>
+                    <p>Match 20%</p>
+                  </div>
+                  <div class="col align-items-center d-flex justify-content-end">
+                    <p style="font-size: 18px">IDR. 209.000</p>
+                  </div>
+                </div>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-4">
+            <figure class="figure">
+              <img src="img/single/similar/3.png" class="figure-img img-fluid" />
+              <figcaption class="figure-caption">
+                <div class="row">
+                  <div class="col">
+                    <h4>Hatty Bomb</h4>
+                    <p>Match 20%</p>
+                  </div>
+                  <div class="col align-items-center d-flex justify-content-end">
+                    <p style="font-size: 18px">IDR. 209.000</p>
+                  </div>
+                </div>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Akhir Similar Product -->
 
     <!-- Footer -->
 
