beberapa perubahan pada halaman index.html, single.html, cart.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo_small.png" alt="Hefa Store" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
               <div class="col-9 col-sm-4 col-md-6 col-lg-5">
                 <h1 class="mb-4">Spesial Eid Lebaran</h1>
                 <p class="mb-4">Jadikan hari pertama lebaranmu meriah dan memorable</p>
-                <a href="" class="btn btn-warning text-white">Get It Now</a>
+                <a href="single.html" class="btn btn-warning text-white">Get It Now</a>
               </div>
               <div class="col-3 col-sm-6 col-md-4 col-lg-4 d-none d-sm-block offset-1">
                 <img src="img/slideshow/1.png" class="img-fluid" alt="slideshow1" />
