--- a/single.html
+++ b/single.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo_small.png" alt="Hefa Store" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
             <button type="button" class="btn btn-sm btn-success" style="color: white"><i class="fas fa-plus-circle"></i></button>
 
             <div class="btn-product">
-              <a href="" class="btn btn-warning text-white">Add to cart</a>
+              <a href="cart.html" class="btn btn-warning text-white">Add to cart</a>
               <a href="" class="btn" style="background-color: #eaeaef; color: #adadad">Add to wishlist</a>
             </div>
 
