--- a/single.html
+++ b/single.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-uppercase mx-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Category</a>
+              <a class="nav-link" href="category.html">Category</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Designer</a>
@@ -58,7 +58,7 @@
     <div class="container mt-5">
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Category</a></li>
+          <li class="breadcrumb-item"><a href="category.html">Category</a></li>
           <li class="breadcrumb-item active" aria-current="page">Single Product</li>
         </ol>
       </nav>
